--- a/app/scss/custom/tabs.scss
+++ b/app/scss/custom/tabs.scss
@@ -10,6 +10,12 @@ $tabscopyFontStack: 'EB Garamond', 'Garamond', 'Georgia', 'Times New Roman', ser
   list-style-type: none;
 }
 
+.title-bar {
+  height: 100px;
+  border-bottom: none !important;
+  padding: 25px 5px 5px;
+}
+
 .tabs-title > a {
   color: #222222;
   font-size: 21px;
