--- a/app/scss/foundation/settings.scss
+++ b/app/scss/foundation/settings.scss
@@ -70,15 +70,15 @@ $global-font-size: 100%;
 $global-width: rem-calc(1200);
 $global-lineheight: 1.5;
 $foundation-palette: (
-  primary: #000000,
-  secondary: #333333,
-  success: #3adb76,
-  warning: #ffae00,
-  alert: #cc4b37,
+  primary: #3399ff,
+  secondary: #222222,
+  success: #33ff99,
+  warning: #ff9933,
+  alert: #ff3399,
 );
 $light-gray: #CCCCCC;
 $medium-gray: #666666;
-$dark-gray: #333333;
+$dark-gray: #222222;
 $black: #000000;
 $white: #FFFFFF;
 $body-background: $white;
